tests/negative/gold/assert2-test.gold
tests/negative/assert2-test.toit:6:3: error: 'assert' takes exactly one block
  assert 1 == 1
  ^~~~~~
tests/negative/assert2-test.toit:7:3: error: 'assert' takes exactly one block
  assert "msg": 1 == 1
  ^~~~~~
Compilation failed
